syntax = "proto3";

package greet;
option go_package = "greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// unary
message GreetRequest {
    Greeting greeting = 1;
}

// unary
message GreetResponse {
    string result = 1;
}

// server stream
message GreetManyTimesRequest {
    Greeting greeting = 1;
}

// server stream
message GreetManyTimesResponse {
    string result = 1;
}

// client streaming
message LongGreetRequest {
    Greeting greeting = 1;
}

// client streaming
message LongGreetResponse {
    string result = 1;
}


service GreetService {
    // Unary
    rpc Greet (GreetRequest) returns (GreetResponse) {
    };
    // server stream
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {
    };
    // client streaming
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {

    }

}